--- a/contrib/gitian-descriptors/deps-win.yml
+++ b/contrib/gitian-descriptors/deps-win.yml
@@ -1,5 +1,5 @@
 ---
-name: "dogecoin-deps"
+name: "inutoshi-deps"
 suites:
 - "precise"
 architectures:
@@ -126,5 +126,5 @@ script: |
     done
     #
     cd $INSTALLPREFIX
-    find include lib | sort | zip -X@ $OUTDIR/dogecoin-deps-win$BITS-gitian-r10.zip
+    find include lib | sort | zip -X@ $OUTDIR/inutoshi-deps-win$BITS-gitian-r10.zip
   done # for BITS in
