rename remaining references to libbitcoin_cli

--- a/src/qt/Makefile.am
+++ b/src/qt/Makefile.am
@@ -348,7 +348,7 @@ inutoshi_qt_LDADD = libbitcoinqt.a $(LIBBITCOIN_SERVER)
 if ENABLE_WALLET
 inutoshi_qt_LDADD += $(LIBBITCOIN_WALLET)
 endif
-inutoshi_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
+inutoshi_qt_LDADD += $(LIBINUTOSHI_CLI) $(LIBBITCOIN_COMMON) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS)
 inutoshi_qt_LDFLAGS = $(QT_LDFLAGS)
 
