--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -15,7 +15,7 @@ AM_LDFLAGS = $(PTHREAD_CFLAGS)
 LIBBITCOIN_SERVER=$(top_builddir)/src/libbitcoin_server.a
 LIBBITCOIN_WALLET=$(top_builddir)/src/libbitcoin_wallet.a
 LIBBITCOIN_COMMON=$(top_builddir)/src/libbitcoin_common.a
-LIBBITCOIN_CLI=$(top_builddir)/src/libbitcoin_cli.a
+LIBINUTOSHI_CLI=$(top_builddir)/src/libinutoshi_cli.a
 LIBBITCOINQT=$(top_builddir)/src/qt/libbitcoinqt.a
 
 $(LIBBITCOIN):
