--- a/src/qt/test/Makefile.am
+++ b/src/qt/test/Makefile.am
@@ -38,7 +38,7 @@ test_bitcoin_qt_LDADD = $(LIBBITCOINQT) $(LIBBITCOIN_SERVER)
 if ENABLE_WALLET
 test_bitcoin_qt_LDADD += $(LIBBITCOIN_WALLET)
 endif
-test_bitcoin_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBLEVELDB) \
+test_bitcoin_qt_LDADD += $(LIBINUTOSHI_CLI) $(LIBBITCOIN_COMMON) $(LIBLEVELDB) \
   $(LIBMEMENV) $(BOOST_LIBS) $(QT_DBUS_LIBS) $(QT_TEST_LIBS) $(QT_LIBS) \
   $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS)
 test_bitcoin_qt_LDFLAGS = $(QT_LDFLAGS)
